nextcloud/server/nextcloud-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-server
  labels:
    app: nextcloud-server
  namespace: nextcloud
spec:
  selector:
    pod-label: nextcloud-server-pod
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
